--- a/index.html
+++ b/index.html
@@ -5,7 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <style>
-        
+        body{
+            font-family:Arial,sans-serif;
+        }
+        .container{
+       max-width:400px;
+       margin:20px auto; 
+        }
+        h1{
+            text-align:center;
+        }
+        input[type="text"]{
+            width:100%;
+            padding:10px;
+            margin-top: 10px;
+        }
+        button{
+            padding:10px;
+            margin-top: 1opx;
+        }
+        ul{
+            list-style-type:none;
+            padding:0;
+        }
+        li{
+            padding:10px;
+            background-color: #f2f2f2;
+            margin-top: 5px;
+            border-radius: 5px;
+        }
+        .delete{
+            float:right;
+            cursor:pointer;
+        }
     </style>
 </head>
 <body>
