--- a/index.html
+++ b/index.html
@@ -47,5 +47,27 @@
         <button onclick="addTask()">Add Task</button>
         <ul id="taskList"></ul>
     </div>
+    <script>
+        function addTask() {
+            var input = document.getElementById("taskInput");
+            var taskText = input.value;
+            if (taskText.trim() === "") {
+                alert("Please enter a task.");
+                return;
+            }
+            var ul = document.getElementById("taskList");
+            var li = document.createElement("li");
+            li.textContent = taskText;
+            var deleteButton = document.createElement("span");
+            deleteButton.textContent = "❌";
+            deleteButton.classList.add("delete");
+            deleteButton.onclick = function () {
+                ul.removeChild(li);
+            };
+            li.appendChild(deleteButton);
+            ul.appendChild(li);
+            input.value = "";
+        }
+    </script>    
 </body>
 </html>
