--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <style>
         body{
             font-family:Arial,sans-serif;
+background-color:#FFBBEC;
+
+
         }
         .container{
+
        max-width:400px;
        margin:20px auto; 
         }
